<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp">
        <!-- Mi lista -->
        <android.support.v7.widget.CardView
            android:id="@+id/cvMyList"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:tag="myList">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/list"
                android:layout_gravity="center|top"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myList"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_gravity="bottom|center" />
        </android.support.v7.widget.CardView>
        <!-- Lista Semanal -->
        <android.support.v7.widget.CardView
            android:id="@+id/cvList"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:tag="list"
            android:layout_alignParentEnd="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/tasks"
                android:layout_gravity="center|top"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekendList"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_gravity="bottom|center" />
        </android.support.v7.widget.CardView>
        <!-- Oración de la mañana -->
        <android.support.v7.widget.CardView
            android:id="@+id/cvLaudes"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:tag="laudes"
            android:layout_marginTop="165dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/laudes"
                android:layout_gravity="center|top"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laudes"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_gravity="bottom|center" />
        </android.support.v7.widget.CardView>
        <!-- Biblia -->
        <android.support.v7.widget.CardView
            android:id="@+id/cvBible"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="165dp"
            android:tag="bible"
            android:layout_alignParentEnd="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/bible"
                android:layout_gravity="center|top"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biblia"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_gravity="bottom|center" />
        </android.support.v7.widget.CardView>
        <!-- Resucito -->
        <android.support.v7.widget.CardView
            android:id="@+id/cvResucito"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:tag="resucito"
            android:layout_alignParentBottom="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/resucito"
                android:layout_gravity="center|top"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Resusito"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_gravity="bottom|center" />
        </android.support.v7.widget.CardView>
        <!-- Biblia -->
        <android.support.v7.widget.CardView
            android:id="@+id/cvCantos"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="330dp"
            android:tag="cantos"
            android:layout_alignParentEnd="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/guitar"
                android:layout_gravity="center|top"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantos"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_gravity="bottom|center" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>